unpackaged/main/default/objects/Fellow_App_Validation__mdt/Fellow_App_Validation__mdt.object-meta.xml
<CustomObject>
    <label>Fellow App Validation</label>
    <pluralLabel>Fellow App Validations</pluralLabel>
</CustomObject>