unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Background</fullName>
            </value>
            <value>
                <fullName>Preference</fullName>
            </value>
            <value>
                <fullName>CoverLetter</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>