unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Compare2__c.field-meta.xml
<CustomField>
    <fullName>Compare2__c</fullName>
    <label>Compare2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>=</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>is null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>