unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/DataType2__c.field-meta.xml
<CustomField>
    <fullName>DataType2__c</fullName>
    <label>DataType2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>