unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Fellowship_Region__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Region__c</fullName>
    <label>Fellowship Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Fellowship</fullName>
                <default>true</default>
                <label>U.S. Fellowship</label>
            </value>
            <value>
                <fullName>China Fellowship</fullName>
            </value>
            <value>
                <fullName>India Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>