unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Field1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>