unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>Field2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>