unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>Field3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>