unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/FieldRef1__c.field-meta.xml
<CustomField>
    <fullName>FieldRef1__c</fullName>
    <label>FieldRef1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>