unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/FieldRef2__c.field-meta.xml
<CustomField>
    <fullName>FieldRef2__c</fullName>
    <label>FieldRef2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>