unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/FieldRef3__c.field-meta.xml
<CustomField>
    <fullName>FieldRef3__c</fullName>
    <label>FieldRef3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>