unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Validate_On__c.field-meta.xml
<CustomField>
    <fullName>Validate_On__c</fullName>
    <label>Validate On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Save</fullName>
                <default>true</default>
                <label>Save</label>
            </value>
            <value>
                <fullName>Submit</fullName>
            </value>
            <value>
                <fullName>Save + Submit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>