unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <label>Value1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>