unpackaged/main/default/objects/Fellow_App_Validation__mdt/fields/Value3__c.field-meta.xml
<CustomField>
    <fullName>Value3__c</fullName>
    <label>Value3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>